src/test/ui/occurs-check.stderr
error[E0308]: mismatched types
  --> $DIR/occurs-check.rs:5:9
   |
LL |     f = Box::new(f);
   |         ^^^^^^^^^^^- help: try using a conversion method: `.to_string()`
   |         |
   |         cyclic type of infinite size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
